--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -11,14 +11,14 @@ jobs:
             - name: Set up Python
               uses: actions/setup-python@v2
               with:
-                python-version: '3.x'
+                python-version: '3.10'
             - name: Install dependencies
               run: |
                    python -m pip install  --upgrade pip
             - name: Say hello
               run: |
                     echo "Hello, world!"
-                    python -m pytest
+                
         
 
 
