--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -1,6 +1,10 @@
 name: Python application test with Github Actions
 
-on: [push]
+on: 
+    push:
+        branches:
+            - main
+            - master
 
 jobs:
     build:
@@ -15,10 +19,10 @@ jobs:
             - name: Install dependencies
               run: |
                    python -m pip install  --upgrade pip
-            - name: Say hello
-              run: |
-                    echo "Hello, world!"
-                
+            - name: Run test
+              run : |
+                python test.py
+
         
 
 
