--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -22,6 +22,13 @@ jobs:
             - name: Run test
               run : |
                 python test.py
+            - name: Deploy
+            if: success()
+            run: |
+                echo "Test passed"
+            run: |
+                echo "Desplegando en servidor de producción"
+            
 
         
 
