--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -10,12 +10,16 @@ jobs:
     build:
         runs-on: ubuntu-latest
 
+        strategy:
+            matrix:
+                python-version: [3.6, 3.7, 3.8, 3.9, 3.10]
+
         steps:
             - uses: actions/checkout@v2
             - name: Set up Python
               uses: actions/setup-python@v2
               with:
-                python-version: '3.10'
+                python-version: ${{ matrix.python-version }}
             - name: Install dependencies
               run: |
                    python -m pip install  --upgrade pip
