--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -29,7 +29,7 @@ jobs:
                 python test.py
             - name: Docker hub
               run: |
-                echo "${{ secrets.DOCKER_HUB_USER }}" | docker login -u "${{ secrets.DOCKER_HUB_USER }}" --password-stdin 
+                echo "${{ secrets.DOCKER_HUB_PASS }}" | docker login -u "${{ secrets.DOCKER_HUB_USER }}" --password-stdin 
             - name: Deploy
               if: success()
               run: |
