--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,7 @@ jobs:
                 os: [ubuntu-latest]
                 python-version: ['3.10']
         steps:
-            - uses: actions/checkout@v2
-            - name:
+            - name: Login dockerhub
               run: |
                 echo "${{ secrets.DOCKER_HUB_PASS }}" | docker login -u "${{ secrets.DOCKER_HUB_USER }}" --password-stdin
             - name: Pull image
